--- a/profiling/index.html
+++ b/profiling/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Health Data Statistics</title>
+    <title>Data Profiling</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -195,7 +195,7 @@
 <body>
     <div class="card-container">
         <!-- KidSIDES Card -->
-        <div class="data-card" onclick="window.location.href='../profiling/kidsides.html'">
+        <div class="data-card" onclick="window.location.href='kidsides.html'">
             <div class="card-header">
                 <div class="card-bg kidsides-bg"></div>
                 <div class="card-logo kidsides-logo">
@@ -215,7 +215,7 @@
         </div>
         
         <!-- OnSIDES Card -->
-        <div class="data-card onsides-card" onclick="window.location.href='../profiling/onsides.html'">
+        <div class="data-card onsides-card" onclick="window.location.href='onsides.html'">
             <div class="card-header">
                 <div class="card-bg onsides-bg"></div>
                 <div class="card-logo onsides-logo">
